--- a/src/core_plugins/kibana/translations/zh-CN.json
+++ b/src/core_plugins/kibana/translations/zh-CN.json
@@ -1,19 +1,19 @@
 {
   "UI-WELCOME_MESSAGE": "装载中....",
   "UI-WELCOME_ERROR": "载入失败，请联系系统维护人员",
-  "KIBANA-CONFIGURE_INDEX_PATTERN": "Configure an index pattern",
-  "KIBANA-MUST_CONFIGURE_INDEX_PATTERN": "In order to use Kibana you must configure at least one index pattern. Index patterns are used to identify the Elasticsearch index to run search and analytics against. They are also used to configure fields.",
-  "KIBANA-CONTAINS_TIME_BASED_EVENTS": "Index contains time-based events",
+  "KIBANA-CONFIGURE_INDEX_PATTERN": "请配置索引",
+  "KIBANA-MUST_CONFIGURE_INDEX_PATTERN": "至少需要配置一个索引作为查询和统计的数据源",
+  "KIBANA-CONTAINS_TIME_BASED_EVENTS": "索引包含时间",
   "KIBANA-INDEX_NAME_CREATED_BY_EVENT_TIMES": "Use event times to create index names ",
   "KIBANA-DEPRECATED": "[DEPRECATED]",
   "KIBANA-ALERT_INDEX_PATTERN_DEPRECATED": "Time-interval based index patterns are deprecated!",
-  "KIBANA-WE": " We",
-  "KIBANA-STRONGLY_RECOMMEND": " strongly recommend",
+  "KIBANA-WE": " 我们",
+  "KIBANA-STRONGLY_RECOMMEND": " 强烈建议",
   "KIBANA-WILD_CARD_PATTERN": " using wildcard pattern names instead of time-interval based index patterns.",
   "KIBANA-RECOMMEND_WILD_CARD_PATTERN_DETAILS": "Kibana is now smart enough to automatically determine which indices to search against within the current time range for wildcard index patterns. This means that wildcard index patterns now get the same performance optimizations when searching within a time range as time-interval patterns.",
-  "KIBANA-INDEX_PATTERN_INTERVAL": "Index pattern interval",
-  "KIBANA-INDEX_NAME_OR_PATTERN": "Index name or pattern",
-  "KIBANA-WILDCARD_DYNAMIC_INDEX_PATTERNS": "Patterns allow you to define dynamic index names using * as a wildcard. Example: logstash-*",
+  "KIBANA-INDEX_PATTERN_INTERVAL": "索引时间间隔",
+  "KIBANA-INDEX_NAME_OR_PATTERN": "索引名",
+  "KIBANA-WILDCARD_DYNAMIC_INDEX_PATTERNS": "索引名中可以使用*作为通配符，例如: logstash-*",
   "KIBANA-STATIC_TEXT_IN_DYNAMIC_INDEX_PATTERNS": "Patterns allow you to define dynamic index names. Static text in an index name is denoted using brackets. Example: [logstash-]YYYY.MM.DD. Please note that weeks are setup to use ISO weeks which start on Monday.",
   "KIBANA-NOTE_COLON": "Note:",
   "KIBANA-WEEKLY_ISO_NOTICE": "I noticed you are using weekly indices. Kibana requires ISO weeks be used in your index creation.",
@@ -30,13 +30,13 @@
   "KIBANA-EXAMPLE_TIME_RANGE": "logstash-2015.12.21",
   "KIBANA-FALL_WITHIN_CURRENT_TIME_RANGE": ") that fall within the current time range.",
   "KIBANA-SAMPLE_ALERT": "Attempted to match the following indices and aliases:",
-  "KIBANA-EXPAND_SEARCH": "Expand Search",
+  "KIBANA-EXPAND_SEARCH": "展开搜索",
   "KIBANA-EXISTING_MATCH_PERCENT": "Pattern matches {{indexExistingMatchPercent}} of existing indices and aliases",
   "KIBANA-NON_MATCHING_INDICES_AND_ALIASES": "Indices and aliases that were found, but did not match the pattern:",
-  "KIBANA-MORE": "more",
-  "KIBANA-TIME_FIELD_NAME": "Time-field name",
-  "KIBANA-REFRESH_FIELDS": "refresh fields",
-  "KIBANA-INVALID_INDEX_PATTERN": "Invalid index name pattern.",
+  "KIBANA-MORE": "更多",
+  "KIBANA-TIME_FIELD_NAME": "时间字段",
+  "KIBANA-REFRESH_FIELDS": "刷新字段",
+  "KIBANA-INVALID_INDEX_PATTERN": "非法索引名",
   "KIBANA-DATE_FORMAT_DOCS": "Date Format Documentation",
   "KIBANA-WIKI_ISO_WEEK_DATE": "Wikipedia: ISO Week Date",
   "KIBANA-NO_INDICES_MATCHING_PATTERN": "Could not locate any indices matching that pattern. Please add the index to Elasticsearch",
@@ -44,15 +44,15 @@
   "KIBANA-INVALID_NON_UNIQUE_INDEX_NAME_CREATED": "Invalid pattern, interval does not create unique index names",
   "KIBANA-FIELD_FILTER_EVENTS_GLOBAL_TIME" : "This field will be used to filter events with the global time filter",
   "KIBANA-INTERVAL_INDEX_NAMES_ROTATE" : "The interval at which index names rotate.",
-  "KIBANA-WARNING" : "Warning",
-  "KIBANA-NO_DEFAULT_INDEX_PATTERN" : "No default index pattern. You must select or create one to continue.",
-  "KIBANA-LOADING": "Loading",
-  "KIBANA-SET_INDEX_NAME_FIRST": "Set an index name first",
+  "KIBANA-WARNING" : "警告",
+  "KIBANA-NO_DEFAULT_INDEX_PATTERN" : "必须先设置默认索引，操作才能继续",
+  "KIBANA-LOADING": "装载中...",
+  "KIBANA-SET_INDEX_NAME_FIRST": "请先设置索引名",
   "KIBANA-INTERVAL_INDICES_POPULATED" : "Select the interval at which your indices are populated.",
-  "KIBANA-INDICES_MATCH_PATTERN" : "Unable to fetch mapping. Do you have indices matching the pattern?",
-  "KIBANA-ADD_NEW" : "Add New",
+  "KIBANA-INDICES_MATCH_PATTERN" : "无法获取mapping，请确认索引名是否存在",
+  "KIBANA-ADD_NEW" : "新增",
   "KIBANA-SEE" : "See",
-  "KIBANA-CREATE" : "Create",
+  "KIBANA-CREATE" : "新建",
 
   "KBN-DIS-SELECTED-FIELDS" : "已选字段",
   "KBN-DIS-AVAIL-FIELDS" : "可选字段"
